// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with status error 1`] = `
.c0 {
  position: relative;
  margin: 0;
  padding: 18px 30px 20px;
  box-shadow: inset 0 0 0 1px #dbdee1;
  box-sizing: border-box;
}

.c1 {
  font-size: 15px;
  line-height: 24px;
}

.c2 {
  margin-top: 10px;
}

.c3 {
  color: rgba(0,0,0,0.4);
  font-size: 13px;
  font-family: 'YS Text','Helvetica Neue',Arial,sans serif;
  line-height: 18px;
}

<figure
  class="c0"
>
  <figcaption
    class="c1"
  >
    Chart widget caption
  </figcaption>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      При загрузке данных произошла ошибка
    </div>
  </div>
</figure>
`;

exports[`with status loading 1`] = `
.c0 {
  position: relative;
  margin: 0;
  padding: 18px 30px 20px;
  box-shadow: inset 0 0 0 1px #dbdee1;
  box-sizing: border-box;
}

.c1 {
  font-size: 15px;
  line-height: 24px;
}

.c2 {
  margin-top: 10px;
}

.c3 {
  position: relative;
  height: 32px;
}

<figure
  class="c0"
>
  <figcaption
    class="c1"
  >
    Chart widget caption
  </figcaption>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="spin2 spin2_size_xs spin2_view_default spin2_tone_default spin2_position_center spin2_progress_yes"
        data-lego="react"
      />
    </div>
  </div>
</figure>
`;
